--- a/_source/ui/sass/_vars.scss
+++ b/_source/ui/sass/_vars.scss
@@ -7,7 +7,8 @@ $gray-mediumlight: rgb(167,168,172);  // #A7A8AC
 $gray: rgb(128,129,132);              // #808184
 $gray-mediumdark: rgb(110,110,110);   // #6e6e6e
 $gray-dark: rgb(72,72,72);            // #484848
-$gray-darker: rgb(38,38,38);          // #484848
+$gray-darker: rgb(55,55,55);          // #373737
+$gray-darkest: rgb(38,38,38);         // #262626
 $black: rgb(0,0,0);                   // #000000
 
 // Transparent colors:
